# api-bulk-downloader

./: .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml  requirements.txt
api_bulk_downloader/: main.py
api_bulk_downloader/connectors/: salesforce.py  worldbank.py
api_bulk_downloader/core/: config.py  downloader.py  file_utils.py  logger.py
archive/api_bulk_downloader_v1/: main.py
archive/api_bulk_downloader_v1/connectors/: worldbank.py
archive/api_bulk_downloader_v1/core/: downloader.py  file_utils.py  logger.py
configs/: manifest.yaml
docs/: connectors.md  mermaid-conventions.md
outputs/: gdp_jpn.parquet  gdp_jpn_summary.json  population_latam_summary.json
pipelines/default/: manifest.yaml
pipelines/default/schemas/: worldbank_timeseries.yaml
pipelines/gdp_jpn/: manifest.yaml
pipelines/population_latam/: manifest.yaml
pipelines/population_latam/queries/: timeseries.sql
pipelines/population_latam/schemas/: timeseries.yaml
queries/worldbank/: timeseries.sql
src/: cli.py  exceptions.py  exporter.py  manifest.py  runner.py  sql_template.py  summary.py
src/connectors/: protocol.py  salesforce.py  worldbank_indicator.py
tests/: conftest.py  test_cli.py  test_exporter.py  test_file_utils.py  test_manifest.py  test_runner.py  test_sql_template.py  test_summary.py  test_worldbank_connector.py
wdi_pipeline/: cli.py  exceptions.py  exporter.py  logging_setup.py  manifest.py  runner.py  sql_template.py  summary.py  tui.py
wdi_pipeline/connectors/: protocol.py  worldbank_indicator.py
