[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "wdi-pipeline"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "duckdb>=0.10.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "textual>=0.80.0",
]

[project.scripts]
wdi-pipeline = "wdi_pipeline.cli:main"

[tool.setuptools.packages.find]
include = ["wdi_pipeline*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
